fixed toggle alignment

--- a/src/app/components/settings/settings.component.scss
+++ b/src/app/components/settings/settings.component.scss
@@ -42,10 +42,9 @@ mat-form-field {
 //     flex-basis: 80%;
 // }
 
-mat-slide-toggle {
-    float: right !important;
+::ng-deep .mat-list-item-content {
+    justify-content: space-between;
 }
-
 // #saveProfileInfo {
 
 // }
